--- a/interactive-rating-component-main/package.json
+++ b/interactive-rating-component-main/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.4.0"
   }
 }
